<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.lino.cloud</groupId>
    <artifactId>cloud-driver</artifactId>
    <version>1.0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>cloud-driver-api</module>
        <module>cloud-driver-plugin</module>
        <module>cloud-driver-extensions</module>
        <module>cloud-driver-bootstrap</module>
        <module>cloud-driver-auth</module>
        <module>cloud-driver-platforms</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Inherited by every child module, so `mvn deploy` (see .github/workflows/maven-publish.yml)
         publishes the whole reactor to this repository's own GitHub Packages Maven registry. The
         "github" id must match maven-publish.yml's setup-java `server-id` exactly - that's what
         Maven uses to look up the matching <server> credentials setup-java wrote into
         ~/.m2/settings.xml. -->
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages - cloud-driver</name>
            <url>https://maven.pkg.github.com/linoalessio/cloud-driver</url>
        </repository>
    </distributionManagement>

    <!-- de.lino.database:database-driver-api/-plugin (every module below depends on one or both)
         is an external artifact group, not part of this repo - it's published to its own GitHub
         Packages registry under linoalessio/database-driver-v2, not Maven Central, so it must be
         declared explicitly here or dependency resolution 404s against central for anyone (CI
         included) whose local Maven cache doesn't already happen to have it. The "database-driver-github"
         id must match .github/workflows/maven.yml's/maven-publish.yml's second setup-java
         `server-id` exactly, the same join-key reasoning as the "github" id above. Reading from
         GitHub Packages always requires authentication, even for a public package - see those
         workflow files for the read-side credentials this repository's CI supplies. -->
    <repositories>
        <repository>
            <id>database-driver-github</id>
            <name>GitHub Packages - database-driver-v2 (linoalessio)</name>
            <url>https://maven.pkg.github.com/linoalessio/database-driver-v2</url>
        </repository>
    </repositories>

</project>